2011-04-22  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Remove `const'.

2011-04-22  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/settings.cpp:
		Add .m2t extension.

2010-05-26  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/main.cpp:
	* src/mpgfile.h:
		Replace `index::index' with `class index' to make
		gcc 4.5 happy.

2010-03-06  Michael Riepe  <too-tired@users.sourceforge.net>

	* DISTFILES:
		Add dvbcut.ico.
	* dvbcut.ico:
		Converted icon for Windows.

2010-02-25  Michael Riepe  <too-tired@users.sourceforge.net>

	* DISTFILES:
		Add dvbcut.svg.
	* dvbcut.svg:
		Icon contributed by Franmcesco Fumanti.
	* makefile.in:
		Install icon.

2010-02-24  Michael Riepe  <too-tired@users.sourceforge.net>

	* DISTFILES:
		Add new files.
	* dvbcut.desktop.in:
		Add desktop file template.
	* dvbcut.xml:
		Add mime type declaration for application/x-dvbcut.
	* makefile.in:
		Install new files.
	* configure.in:
		Create dvbcut.desktop from dvbcut.desktop.in.

2009-06-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* makefile.in:
		Fix stamp-dist dependencies.
		Fix non-POSIX sort command.
		Add bindist target.

2009-06-27  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/dvbcutbase.ui:
		Add help dialog and about box.
	* src/dvbcut_en.html:
		Initial (rudimentary) help file.
	* DISTFILES:
		Add dvbcut_en.html.
	* src/Makefile.in:
		Install dvbcut_en.html.

2009-06-27  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/stream.h:
		Make non-interlaced video the default.

2009-06-27  Michael Riepe  <too-tired@users.sourceforge.net>

	* makefile.in:
		Allow parallel (make -j<n>) install.

2009-06-26  Michael Riepe  <too-tired@users.sourceforge.net>

	* import/stdlib.h:
		Use #include_next <stdlib.h> instead of a fixed path.
		
2009-06-23  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
	* src/mpegmuxer.cpp:
		Fix gcc 4.4 build.
