@@ -1,5 +1,5 @@
 # makefile.in - top-level makefile template for Linux/Unix
-# Copyright (c) 2008 - 2009 Michael Riepe
+# Copyright (c) 2008 - 2011 Michael Riepe
 #  
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -24,9 +24,10 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 bindir = @bindir@
 datadir = @datadir@
+datarootdir = @datarootdir@
 mandir = @mandir@
 man1dir = $(mandir)/man1
-pkgdatadir = $(datadir)/dvbcut
+pkgdatadir = $(datarootdir)/dvbcut
 
 installdirs = $(DESTDIR)$(man1dir) \
 	$(DESTDIR)$(pkgdatadir)/icons \
